tests/expectations/compiler/function/standard_function_calls_transition_function_fail.out
Error [ETYC0372042]: Only regular fns can be called from a regular function or constructor.
    --> compiler-test:3:16
     |
   3 |         return adder(a, b);
     |                ^^^^^^^^^^^
Error [ETYC0372042]: Only regular fns can be called from a regular function or constructor.
    --> compiler-test:5:16
     |
   5 |         return subber(a, b);
     |                ^^^^^^^^^^^^
